# RightImpact

./: .editorconfig  .env.example  .eslintrc.js  .gitattributes  .gitignore  .prettierrc  App.tsx  CHANGELOG.md  CONTRIBUTING.md  LICENSE  app.json  babel.config.js  campaign.db  index.js  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.app.json  tsconfig.json  tsconfig.json.bak  tsconfig.minimal.json  tsconfig.paths.json  tsconfig.tsbuildinfo
backend/: README.md  alembic.ini  base.py  campaign.db-shm  campaign.db-wal  campaign.db?cache=shared&journal_mode=WAL  database.py  init_db.py  logging_config.py  main.py  models.py  performance_results_20250625_230915.json  performance_results_20250625_231005.json  pyproject.toml  run_server.py  sample_contacts.csv  setup.py  test.db  test_app.py  test_models.py
backend/alembic/: env.py
backend/auth/: auth.py  dependencies.py
backend/contacts/: __init__.py  contacts.py  matching.py  routes.py
backend/export/: export.py
backend/groups/: __init__.py  routes.py
backend/identification/: crud.py  routes.py  schemas.py
backend/messages/: __init__.py  crud.py  routes.py  schemas.py
backend/migrations/: 000X_add_zip_code_to_users.py  add_message_template_groups.py  env.py  fix_message_status_enum.py  remove_contact_list.py  update_message_template_status.py  update_message_template_status_enum.py
backend/models/: __init__.py  associations.py  base.py  contact.py  contact_match.py  group.py  relationships.py  sent_message.py  shared_contact.py  user.py
backend/sent_messages/: routes.py  (+1 more)
(+159 files in other folders)
